# ZeroDesk

./: .gitignore  AGENTS.md  CLAUDE.md  COMMIT_MSG.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: 功能列表.md  对话附件功能路线.md  技术栈.md  页面架构与详细设计.md
html-mockups/: common.css  common.js  page-01-workspace.html  page-02-tasks.html  page-03-plan.html  page-04-console.html  page-05-agents.html  page-06-teams.html  page-07-models.html  page-08-skills.html  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: context_builder.rs  costing.rs  engine.rs  lib.rs  main.rs
src-tauri/src/commands/: agents.rs  chat.rs  dashboard.rs  knowledge.rs  mod.rs  models.rs  prompts.rs  search.rs  settings.rs  skills.rs  tasks.rs  teams.rs  workspace.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_system_settings.sql  003_provider_model_enabled.sql  004_skillsmp_api_key.sql  005_system_model_assignments.sql  006_translation_task_key.sql  007_skill_source_external.sql  008_team_planning_task_key.sql  009_task_team_id.sql  010_task_runs.sql  011_knowledge_folders.sql  012_agent_conversation.sql  013_fix_duplicate_runs.sql  014_global_search_fts.sql  015_regenerate.sql  016_skillsmp_api_base_url.sql  017_price_currency.sql  018_chat.sql  019_chat_prompt_usage.sql  020_default_workflow_templates.sql  021_chat_attachments.sql
src-tauri/src/models/: mod.rs
(+69 files in other folders)
