[package]
name = "zerodesk"
version = "0.1.0"
description = "Multi-Agent Task Orchestration Workbench"
authors = ["ZeroDesk"]
edition = "2021"

[lib]
name = "zerodesk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.13.2", features = ["json"] }
urlencoding = "2"
dirs = "6"
